--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -91,6 +91,11 @@
   },
   "settings": [
     {
+      "type": "text",
+      "id": "Main Heading",
+      "label": "Heading"
+    },
+    {
       "type": "image_picker",
       "id": "image",
       "label": "t:sections.image-with-text.settings.image.label"
